update rajaOnkir n stok Cart

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+RAJAONGKIR_API_KEY=
+RAJAONGKIR_PACKAGE=starter
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
