--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/ui": "^3.4",
         "midtrans/midtrans-php": "^2.5",
         "sentry/sentry-laravel": "^2.12",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "yajra/laravel-datatables-oracle": "~9.0",
+        "kavist/rajaongkir": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -64,5 +65,9 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [{
+        "type": "vcs",
+        "url": "https://github.com/akbarhmu/rajaongkir"
+    }]
 }
